add Create Shrimp, IShrimpRepository and Shrimp Repository

--- a/ShrimplyMVC/Views/Shared/_Layout.cshtml
+++ b/ShrimplyMVC/Views/Shared/_Layout.cshtml
@@ -31,7 +31,9 @@
                                 Admin
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/Admin/Shrimps/Add">Add Shrimp</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Shrimp" asp-action="Create">Create Shrimp</a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Shrimp" asp-action="Index">Shrimps</a>
                                 </li>
