--- a/ShrimplyMVC/Views/Shared/_Layout.cshtml
+++ b/ShrimplyMVC/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Admin
@@ -40,6 +40,12 @@
                             </ul>
                         </li>
                     </ul>
+
+                    <div class="d-flex align-items-center">
+                        <a class="btn btn-dark me-3" asp-controller="Home" asp-action="Register">Register</a>
+                        <a class="btn btn-dark" asp-controller="Home" asp-action="Register">Login</a>
+                    </div>
+
                 </div>
             </div>
         </nav>
