--- a/ShrimplyMVC/Views/Shared/_Layout.cshtml
+++ b/ShrimplyMVC/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
                     <div class="d-flex align-items-center">
                         <a class="btn btn-dark me-3" asp-controller="Home" asp-action="Register">Register</a>
-                        <a class="btn btn-dark" asp-controller="Home" asp-action="Register">Login</a>
+                        <a class="btn btn-dark" asp-controller="Home" asp-action="Login">Login</a>
                     </div>
 
                 </div>
