--- a/ShrimplyMVC/Views/Home/Details.cshtml
+++ b/ShrimplyMVC/Views/Home/Details.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ShrimplyMVC.Models.Domain;
+@using Microsoft.AspNetCore.Identity;
+@inject UserManager<IdentityUser> _userManager;
 @model Shrimp
 
 @{
@@ -10,6 +12,14 @@
     <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
             <h3>@Model.Name</h3>
+
+            <div class="mb-3">
+                <span>
+                    <a id="btnLike" style="cursor: pointer"><i class="bi bi-hand-thumbs-up"></i></a>
+                     @ViewData["TotalLikes"] likes
+                </span>
+            </div>
+
 
             <div class="d-flex justify-content-between">
                 <span class="text-secondary">@Model.Author</span>
@@ -35,4 +45,26 @@
         </div>
     </div>
 </div>
+
+@section Scripts
+{
+    <script>
+        const btnLikeElement = document.getElementById('btnLike');
+
+        async function addShrimpLike()
+        {
+            fetch('/api/ShrimpLike/Add', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': '*/*'
+                },
+                body: JSON.stringify({ shrimpId : '@Model.Id', userId : '@_userManager.GetUserId(User)' })
+            })
+            .then(console.log("asa"));
+        }
+
+        btnLikeElement.addEventListener('click', addShrimpLike);
+    </script>
+}
 
