--- a/ShrimplyMVC/Views/Home/Details.cshtml
+++ b/ShrimplyMVC/Views/Home/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ShrimplyMVC.Models.Domain;
 @using Microsoft.AspNetCore.Identity;
-@inject UserManager<IdentityUser> _userManager;
+@inject UserManager<IdentityUser> userManager;
+@inject SignInManager<IdentityUser> signInManager;
 @model Shrimp
 
 @{
@@ -15,8 +16,14 @@
 
             <div class="mb-3">
                 <span>
-                    <a id="btnLike" style="cursor: pointer"><i class="bi bi-hand-thumbs-up"></i></a>
-                     @ViewData["TotalLikes"] likes
+                    @if (signInManager.IsSignedIn(User))
+                    {
+                        <a id="btnLike" style="cursor: pointer"><i class="bi bi-hand-thumbs-up"></i></a>
+                    }      
+                    <span id="totalLikes">
+                        @ViewData["TotalLikes"]
+                    </span>
+                      likes
                 </span>
             </div>
 
@@ -50,6 +57,20 @@
 {
     <script>
         const btnLikeElement = document.getElementById('btnLike');
+        const totalLikesElement = document.getElementById('totalLikes');
+
+        async function totalLikes()
+        {
+            fetch('/api/ShrimpLike/@Model.Id/TotalLikes', {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': '*/*'
+                }
+            })
+                .then(data => data.json())
+                .then(result => totalLikesElement.innerHTML = result);
+        }
 
         async function addShrimpLike()
         {
@@ -59,9 +80,13 @@
                     'Content-Type': 'application/json',
                     'Accept': '*/*'
                 },
-                body: JSON.stringify({ shrimpId : '@Model.Id', userId : '@_userManager.GetUserId(User)' })
+                body: JSON.stringify({ shrimpId : '@Model.Id', userId : '@userManager.GetUserId(User)' })
             })
-            .then(console.log("asa"));
+            .then(() => {
+                btnLike.innerHTML = '<i class="bi bi-hand-thumbs-up-fill"></i>';
+                btnLike.removeEventListener('click', addShrimpLike);
+                totalLikes();
+            });
         }
 
         btnLikeElement.addEventListener('click', addShrimpLike);
