--- a/ShrimplyMVC/Views/Home/Details.cshtml
+++ b/ShrimplyMVC/Views/Home/Details.cshtml
@@ -18,7 +18,14 @@
                 <span>
                     @if (signInManager.IsSignedIn(User))
                     {
-                        <a id="btnLike" style="cursor: pointer"><i class="bi bi-hand-thumbs-up"></i></a>
+                        @if (ViewData["Liked"] == "true")
+                        {
+                            <i class="bi bi-hand-thumbs-up-fill"></i>
+                        }
+                        else
+                        {
+                            <a id="btnLike" style="cursor: pointer"><i class="bi bi-hand-thumbs-up"></i></a>
+                        }                      
                     }      
                     <span id="totalLikes">
                         @ViewData["TotalLikes"]
