add IdentityUser functionality for SuperAdmin

--- a/ShrimplyMVC/Views/Shared/_Layout.cshtml
+++ b/ShrimplyMVC/Views/Shared/_Layout.cshtml
@@ -42,7 +42,9 @@
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Shrimp" asp-action="Index">Shrimps</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="/Admin/Users/Index">Users</a></li>
+                                    <li>
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                                    </li>
                                 </ul>
                             </li>
                         }
